infra/k8s/jaeger-authelia/04-authelia-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authelia
  template:
    metadata:
      labels:
        app: authelia
    spec:
      enableServiceLinks: false
      containers:
        - name: authelia
          image: authelia/authelia:latest
          ports:
            - containerPort: 9091
          volumeMounts:
            - name: config
              mountPath: /config/configuration.yml
              subPath: configuration.yml
            - name: users
              mountPath: /config/users_database.yml
              subPath: users_database.yml
      volumes:
        - name: config
          configMap:
            name: authelia-config
        - name: users
          configMap:
            name: authelia-users
---
apiVersion: v1
kind: Service
metadata:
  name: authelia
  namespace: ${NAMESPACE}
spec:
  selector:
    app: authelia
  ports:
    - name: http
      port: 9091
      targetPort: 9091
