infra/k8s/jaeger-authelia/06-authelia-portal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authelia-portal
  namespace: ${NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - ${JAEGER_DOMAIN}
      secretName: AppFactory-tls
  rules:
    - host: ${JAEGER_DOMAIN}
      http:
        paths:
          - path: /authelia
            pathType: Prefix
            backend:
              service:
                name: authelia
                port:
                  number: 9091
